--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,36 @@ dependencies {
     implementation 'com.nineoldandroids:sample:2.4.0'
 
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+
+    //rxjava跟retrofit的引用网络请求框架的搭建
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.2.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+
+    /*retrofit2*/
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    /*gason解析器*/
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+
+    //腾讯的Bugly异常上传
+    implementation 'com.tencent.bugly:crashreport:latest.release'
+
+    //BaseQuickAdapter
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+
+    //下拉刷新控件
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-20'
+
+    // rxpermissins
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    //动态权限申请
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+
+    //安卓底部导航栏按钮点击动画框架
+    implementation 'com.github.forvv231:EasyNavigation:1.0.3'
+
+
+
 }
