--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
 def  lifecycle_version = '1.1.0';
 
 dependencies {
-
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -90,6 +90,11 @@ dependencies {
     //安卓底部导航栏按钮点击动画框架
     implementation 'com.github.forvv231:EasyNavigation:1.0.3'
 
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    // 状态栏修改
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
 
     def room_version = "2.2.6"
 
