--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:name=".base.CadApplication"
         android:allowBackup="true"
@@ -12,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
+        android:usesCleartextTraffic="true"
         android:process=":secondProcess"
         android:theme="@style/Theme.Cad">
         <activity android:name=".ui.Activitys.firstActivity">
@@ -22,6 +24,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--login-->
+        <activity android:name=".ui.Activitys.LoginActivity"
+            android:launchMode="singleInstance"
+            />
+        <!--富文本-->
+        <activity android:name=".ui.Activitys.WebViewActivity"
+            android:launchMode="singleInstance"
+            />
+        <!--关于我们-->
+        <activity android:name=".ui.Activitys.AboutActivity"
+            android:launchMode="singleInstance"
+            />
     </application>
 
 </manifest>
