--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         jcenter()
         maven { url "https://jitpack.io"  }
 //        maven { url 'https://maven.google.com'}
+//        mavenCentral()
         maven {
             url "https://maven.aliyun.com/repository/jcenter"
         }
